# Caltech2020-Glass-SIMS

./: Caltech 2020 nanoSIMS MIssing SIMS Data Organized.xlsx  Caltech SIMS Raw Data.xlsx  Caltech_calibrations_processing_Processed Fall 2024_Si_Norm_Glass Only.py  GCB Melt Inclusion SIMS Data Summary.xlsx  GCB Melt Inclusion SIMS Data Summary_April_2024.xlsx  NS_Pyroxene_Glass-calib_and Data_Caltech2020_Processed2024.xlsx  NanoSIMS Caltech 2020 SIMS Calibrations_April2025.py   ODRBootstrapping_edits_Fall-2024.py  ODRBootstrapping_edits_Fall_2024.py  SIMS Caltech 2020 Calib April 2024-_chat_drift2.py  SIMS Caltech 2020 Calib April 2024.py  SIMS Caltech 2020 Calib April 2024_chat.py  SIMS Caltech 2020 Calib April 2024_chat_MountB_drift.py  SIMS Caltech 2020 Calib April 2024_chat_drift.py  SIMS Caltech 2023 Calib April 2024_chat_2023 Calib.py  hello.py  pyproject.toml
Missing SIMS FIles/: C6_Ol14_MI2.stat  C6_Ol14_MI2.statc  C6_Ol15_MI1.stat  C6_Ol15_MI1.statc  C6_Ol15_MI2.stat  C6_Ol15_MI2.statc  C6_Ol15_MI3.stat  C6_Ol15_MI3.statc  C6_Ol16.stat  C6_Ol16.statc  C6_Ol16_gls.stat  C6_Ol16_gls.statc  C6_Ol8_MI1.stat.txt
__pycache__/: SIMS Glass Calib  Caltech 2020 Rewrite.py
